--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,6 @@ services:
       - ./var/db:/var/lib/mysql
     environment:
       - MYSQL_ROOT_PASSWORD=rootpwd
-      - MYSQL_DATABASE=app
-      - MYSQL_USER=app
-      - MYSQL_PASSWORD=app_db
+      - MYSQL_DATABASE=app_db
+      - MYSQL_USER=app_user
+      - MYSQL_PASSWORD=app_pwd
